crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__threads__thread-in-logic.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/threads/thread-in-logic
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Content\n" [Done]
outcome: Done
